# skuel

./: .gitignore  AUTH_FALLBACK_REMOVAL_SUMMARY.md  LICENSE  MIGRATION_SUMMARY.md  PHASE_6_1_COMPLETION_SUMMARY.md  PHASE_6_2_COMPLETION_SUMMARY.md  PHASE_6_3_COMPLETION_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_7_IMPLEMENTATION_COMPLETE.md  PHASE_7_IMPLEMENTATION_VERIFICATION.md  README.md  ROUTE_MIGRATION_STATUS.md  ROUTE_MIGRATION_VERIFICATION_REPORT.md  TEST_RESULTS.md
app/: .env.example  .gitignore  .sesskey  0 SEL cats organization keys.txt  ACTIVITY_EXTRACTION_ENABLED.md  ADAPTIVE_LP_USERCONTEXT_REFACTOR_2026-02-08.md  ALL_OPTIMIZATIONS_SUMMARY.md  ASKESIS_NAVBAR_FIX.md  ASKESIS_SIDEBAR_COLOR_FIX.md  CALENDAR_TO_EVENTS_MIGRATION_COMPLETE.md  CLAUDE.md  DEPLOYMENT_NEXT_STEPS.md  DOCS_SKILLS_EVOLUTION_IMPLEMENTATION.md  DOCUMENTATION_COMPLETE_2026-01-31.md  DOCUMENTATION_UPDATED_2026-02-01.md  DOCUMENTATION_UPDATES_2026-01-25.md  DOCUMENTATION_UPDATES_2026-01-31.md  DOCUMENTATION_UPDATES_PHASE5.md  DOCUMENTATION_UPDATES_SUMMARY.md  DOMAINCONFIG_OPTIMIZATION_COMPLETE.md  DOMAIN_SYNC_INTEGRATION_GUIDE.md  DTO_RELATIONSHIP_AUDIT.csv  Dockerfile  Dockerfile.production  EMBEDDINGS_SERVICE_FIX_COMPLETE.md  FUTURE_SERVICES.md  JOURNALS_MULTI_MODAL_SUMMARY.md  KU_MODEL_CLEANUP_2026-02-10.md  METRICS_REFACTOR_COMPLETE.md  MULTI_MODAL_JOURNALS_COMPLETE.md  NAVBAR_FIX_ADDITIONAL_FILES.md  NAVBAR_FIX_APPLIED.md  NAVBAR_FIX_COMPLETE.md  NAVBAR_FIX_IMPLEMENTATION_COMPLETE.md  OBSERVABILITY_CHANGES_SUMMARY.md  OBSERVABILITY_PHASE1_COMPLETE.md  PHASE1_ALL_TASKS_COMPLETE.md  PHASE1_ASSIGNMENT_SHARING_COMPLETE.md  PHASE1_COMPLETE.md  PHASE1_PERFORMANCEMONITOR_REMOVAL_COMPLETE.md  (+73 more)
app/.claude/: settings.json  settings.local.json
app/adapters/: README.md  __init__.py  calendar_adapters.py  personalized_knowledge_discovery_adapter.py
app/api/: __init__.py  clean_decorators.py  models.py
app/components/: __init__.py  activity_views_base.py  admin_components.py  atomic_habits_achievements.py  atomic_habits_analytics.py  atomic_habits_animations.py  atomic_habits_components.py  atomic_habits_intelligence.py  atomic_habits_mobile.py  auth_components.py  calendar_components.py  calendar_converters.py  card_generator.py  choices_views.py  dashboard_components.py  docs_components.py  drawer_layout.py  error_components.py  events_views.py  form_generator.py  goals_views.py  habits_views.py  insight_card.py  knowledge_ui_components.py  ku_adaptive_components.py  ku_ui_components.py  principles_views.py  search_components.py  shared_ui_components.py  tasks_views.py  timeline_components.py  todoist_task_components.py  user_preferences_components.py  visualization_components.py
app/core/: constants.py  errors.py
app/data/:  TODOs - 4 future  .11-24 mypy errors - current.kate-swp  0 beginning of DSL 11-27  0 my py errors  0 working on  11 - 08 test patterns  11-01-1  11-01-2   11-01-protocols  11-02 3 review components  11-06 analytics  11-06-2  11-06-3  11-07 apis  11-07 hooks  11-08 abcd.md  11-08 migration  11-08 tests  11-11 fixes  11-16-1 todos  11-17-3   11-19 - possible improvements  11-19 2  11-22-2 mypy  11-22-3 - patterns established  11-22-4  improvements possible  11-22-5 context within query  11-22-6  11-23 phase 4 - citation evidence  11-23-1  11-24 mypy errors - current  11-24-1  11-24-2 form submission  11-25 relationships registry expansion   11-25 rr analysis  11-26 search +   11-26 staart  11-26-3  11-26-4   11-26-5  (+181 more)
app/docs/: ANALYSIS_README.md  CLAUDE_QUICKSTART.md  COMPLETE_ASYNC_EMBEDDINGS_SUMMARY.md  CROSS_REFERENCE_INDEX.md  E2E_TEST_RESULTS.md  GOALS_IMPLEMENTATION_SUMMARY.md  INDEX.md  PHASE1_ASYNC_EMBEDDINGS_COMPLETE.md  PHASES.md  PHASE_DEPENDENCIES.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  REFACTORING_CHECKLIST.md  TROUBLESHOOTING.md  UX_IMPROVEMENTS_IMPLEMENTATION.md  UX_INTEGRATION_COMPLETE.md  UX_INTEGRATION_GUIDE.md  UX_TEST_REPORT.md  bloat-cleanup-phase2-categorization.md  bloat-detailed-assignment-and-social-analysis.md  edge_metadata_fields.md  freshness_config.yaml  ku_services  v0.1_threads_design_notes_for_claude.md  vision_reading_app
app/examples/: 100_percent_dynamic_example.py  event_system_enhancements_example.py  form_helpers_usage.py  graph_intelligence_examples.py  relationship_first_api_examples.py
app/learning_path_templates/: example_python_mastery.yaml  template_basic.yaml  template_markdown.md
app/monitoring/: README.md
app/notebooks/: neo4j_browser_template.ipynb  neo4j_editor_template.ipynb
app/scripts/: README.md  README_GENAI_SCRIPTS.md  add_frontmatter.py  add_metadata_to_domains.sh  add_skill_backlinks.py  analyze_ab_test_results.py  analyze_search_metrics.py  analyze_skill_doc_links.py  benchmark_embedding_cache.py  benchmark_hybrid_queries.py  benchmark_phase3b_performance.py  check_embedding_versions.py  clear_neo4j.py  copy-vendor-libs.js  create_demo_user.py  create_fulltext_indexes.py  create_knowledge_fulltext_indexes.py  create_knowledge_indices.py  create_moc_fulltext_index.py  create_test_user_data.py  create_vector_indexes.py  cypher_linter.py  demo_evidence_query.py  detect_bloat.py  detect_legacy_code.py  detect_library_changes.py  docs_contextual_check.py  docs_contextual_check_v2.py  docs_discover.py  docs_discovery.py  docs_freshness.py  docs_review_scheduler.py  docs_to_neo4j.py  docs_update.py  export_graphql_schema.py  fix_missing_reverse_links.py  fix_neo4j_auth.sh  generate_claude_summary.py  generate_cross_reference_index.py  generate_docs_index.py  (+34 more)
app/templates/: RELATIONSHIPS_GUIDE.md  event_template.yaml  habit_template.yaml  knowledge_unit_template.yaml  task_template.yaml
app/tests/: DELETED_FILES_LIST.txt  README_AUTHENTICATION.md  README_TEST_STATUS.md  SYNC_SYSTEM_TEST_PLAN.md  TESTING_SUMMARY.md  TEST_CLEANUP_SUMMARY.md  __init__.py  conftest.py  create_test_habits.py  test_adapter_less_crud_routes.py  test_adaptive_sel_service.py  test_askesis_intelligence.py  test_askesis_phase2_intelligence.py  test_auth_session.py  test_authentication.py  test_base_service_refactoring.py  (+51 more)
(+2969 files in other folders)
